@@ -1,17 +1,16 @@
 package practice;
 
 import java.util.Arrays;
-import java.util.Collection;
 import java.util.List;
 import java.util.NoSuchElementException;
 import java.util.function.Predicate;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import model.Candidate;
 import model.Cat;
 import model.Person;
 
 public class StreamPractice {
+    private static final String COMA = ",";
     /**
      * Given list of strings where each element contains 1+ numbers:
      * input = {"5,30,100", "0,22,7", ...}
@@ -19,9 +18,10 @@ public class StreamPractice {
      * If there is no needed data throw RuntimeException with message
      * "Can't get min value from list: < Here is our input 'numbers' >"
      */
+
     public int findMinEvenNumber(List<String> numbers) {
         return numbers.stream()
-                .map(str -> str.split(","))
+                .map(str -> str.split(COMA))
                 .flatMap(Arrays::stream)
                 .map(Integer::parseInt)
                 .mapToInt(i -> i)
@@ -53,10 +53,12 @@ public class StreamPractice {
      * Example: select men who can be recruited to army (from 18 to 27 years old inclusively).
      */
     public List<Person> selectMenByAge(List<Person> peopleList, int fromAge, int toAge) {
+        Predicate<Person> menByAge = person -> (person.getAge() > fromAge
+                && person.getAge() <= toAge)
+                && (person.getSex() == Person.Sex.MAN);
         return peopleList.stream()
-                .filter(person -> person.getAge() > fromAge && person.getAge() <= toAge)
-                .filter(person -> person.getSex() == Person.Sex.MAN)
-                .collect(Collectors.toList());
+                .filter(menByAge)
+                .toList();
     }
 
     /**
@@ -71,19 +73,14 @@ public class StreamPractice {
      */
     public List<Person> getWorkablePeople(int fromAge, int femaleToAge,
                                           int maleToAge, List<Person> peopleList) {
-        Predicate<Person> isWorkablePersons = new Predicate<Person>() {
-
-            @Override
-            public boolean test(Person person) {
-                return (person.getSex() == Person.Sex.MAN && person.getAge() >= fromAge
-                        && person.getAge() <= maleToAge)
-                        || (person.getSex() == Person.Sex.WOMAN && person.getAge() >= fromAge
-                        && person.getAge() <= femaleToAge);
-            }
-        };
+        Predicate<Person> isWorkablePersons = person -> (person.getSex()
+                == Person.Sex.MAN && person.getAge() >= fromAge
+                && person.getAge() <= maleToAge)
+                || (person.getSex() == Person.Sex.WOMAN && person.getAge() >= fromAge
+                && person.getAge() <= femaleToAge);
         return peopleList.stream()
                 .filter(isWorkablePersons)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -93,13 +90,16 @@ public class StreamPractice {
      */
 
     public List<String> getCatsNames(List<Person> peopleList, int femaleAge) {
+        Predicate<Person> hasWomenCats = person -> person.getSex()
+                == Person.Sex.WOMAN
+                && person.getAge() >= femaleAge
+                && !person.getCats().isEmpty();
         return peopleList.stream()
-                .filter(person -> person.getSex() == Person.Sex.WOMAN
-                        && person.getAge() >= femaleAge)
-                .map(Person::getCats)
-                .flatMap(Collection::stream)
+                .filter(hasWomenCats)
+                .flatMap(person -> person.getCats()
+                        .stream())
                 .map(Cat::getName)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     /**
@@ -120,6 +120,6 @@ public class StreamPractice {
                 .filter(candidateValidator)
                 .map(Candidate::getName)
                 .sorted()
-                .collect(Collectors.toList());
+                .toList();
     }
 }
